lots of figuring out! adjusting, fixing bugs, removed favicon and logo, added tjs, light mode // dark mode preference in stylesheet, made components and icons directory, added plugin to fix icons bug

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -127,7 +127,7 @@ h6 {
   }
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     --bkg: var(--bkg--dark);
     --txt: var(--txt--dark);
